dbとappを疎通できるようにした

--- a/compose.yml
+++ b/compose.yml
@@ -3,4 +3,9 @@ services:
     build: .
     volumes:
       - .:/var/www/
-    working_dir: /var/www/
+    working_dir: /var/www/example-app
+
+  mysql:
+    image: mysql:8.0
+    environment:
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
